--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "jira-rest-api",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "lib/api.js",
   "scripts": {
-    "update": "node lib/get-api-reference.js"
+    "update": "node lib/update.js"
   },
   "keywords": [],
   "author": "Calvin McEachron <calvin@digitil.me> (http://digitil.me/)",
   "license": "ISC",
   "dependencies": {
-    "lodash.merge": "^4.6.0",
-    "request": "^2.79.0",
-    "request-promise": "^4.1.1",
+    "lodash.merge": "4.6.0",
+    "request": "2.79.0",
+    "request-promise": "4.1.1",
     "route-parser": "0.0.5"
   },
   "devDependencies": {
