--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jira-rest-client",
-  "version": "1.0.3",
+  "version": "1.0.4-0",
   "main": "lib/api.js",
   "scripts": {
     "update": "node lib/update.js"
